# cf-tool

./: .gitignore  Cargo.old  Cargo.toml  README.md
src/: README.md  cf.rs  cli.rs  client.rs  cmd.rs  config.rs  files.rs  main.rs  template.rs  utils.rs
src/cf/: languages.rs  mod.rs
src/cli/: contest.rs  mod.rs  template.rs
src/cli/config/: mod.rs  template.rs
src/client/: mod.rs  parser.rs  postbody.rs  scrape.rs  serde_cookies.rs
src/cmd/: gen.rs  login.rs  mod.rs  parse.rs  submit.rs  template.rs  test.rs
src/cmd/template/: add.rs  delete.rs  mod.rs  set_default.rs
