[package]
name = "cf"
version = "0.1.0"
edition = "2021"
description = "cf-tool is a command line interface tool for Codeforces"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
email_address = "0.2.4"
inquire = "0.7.5"
itertools = "0.13.0"
keyring = "2.3.3"
open = "5.1.4"
pathdiff = "0.2.1"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["blocking", "cookies"] }
reqwest_cookie_store = { version = "0.8.0", features = ["serde"] }
rpassword = "7.3.1"
rprompt = "2.1.1"
same-file = "1.0.6"
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_qs = "0.13.0"
shellexpand = "3.1.0"
thiserror = "1.0.61"
